--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -221,3 +220,5 @@ __marimo__/
 
 # test files
 output-*
+/node_modules/
+/cdk.out/
