--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,9 @@ __marimo__/
 output-*
 /node_modules/
 /cdk.out/
+/bin/app.js
+/bin/app.d.ts
+/lib/assignment3-stack.js
+/lib/assignment3-stack.d.ts
+/test/sample.test.js
+/test/sample.test.d.ts
